--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
 
 * { box-sizing: border-box; }
-
+input{
+	margin-right: 15px;
+}
 form,
 .headerContainer,
 #quizResults,
